[#6248] ticket:718 Fixed the truncation of long list items in comments

--- a/Allura/allura/nf/allura/css/site_style.css
+++ b/Allura/allura/nf/allura/css/site_style.css
@@ -2529,6 +2529,9 @@ div.attachment_thumb .file_type span {
   left: 27px;
 }
 
+#comment .grid-14 { overflow: visible; }
+#comment .display_post { margin-right: 5px; }
+
 #comment ul {
   list-style: none;
   margin: 0 20px 20px 0;
